<resources>
    <string name="app_name">RecordDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete the record</string>
    <string name="action_search">Search Record</string>
    <string name="startRecord">StartRecord</string>
    <string name="pauseRecord">PauseRecord</string>
    <string name="continueRecord">ContinueRecord</string>
    <string name="stopRecord">StopRecord</string>
    <string name="startPlay">StartPlay</string>
    <string name="stopPlay">StopPlay</string>
    <string name="stateRecord">Recording now...</string>
    <string name="stateStopRecord">Record complete!</string>
    <string name="stateOverTimeStopRecord">Reach the maximum record time.Auto save complete!</string>
    <string name="statePlay">Playing now...</string>
    <string name="stateStopPlay">Play complete!</string>
    <string name="statePause">Paused</string>
    <string name="showList">Show Record List</string>
    <string name="checkSD">Store the record to SD Card</string>
    <string name="action_share">Share the record with others</string>
    <string name="action_setting">Setting</string>
    <string name="title_activity_setting">Setting</string>
    <string name="setting_max_time">Set Max Time</string>
    <string name="setting_max_time_confirm">Confirm</string>
    <string name="setting_max_time_cancel">Cancel</string>
    <string name="title_activity_tencent_storage">TencentStorage</string>
</resources>
